--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,11 @@
             href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700;900&display=swap"
             rel="stylesheet"
     >
+    <link
+            rel="stylesheet"
+            href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
+            integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous"
+    >
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>MERN E-commerce</title>
   </head>
